Address release descriptor review findings